default/objects/E2E_Sources__c/E2E_Sources__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>E2E Sources</label>
</CustomObject>