default/objects/E2E_Sources__c/fields/Partner_Transit_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Transit_Id__c</fullName>
    <label>Partner Transit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>